--- a/tanushkmedium.html
+++ b/tanushkmedium.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="medium.css">
+    <link rel="stylesheet" href="queries.css">
 </head>
 <body>
         <div class="navigationbar"> 
