--- a/tanushkmedium.html
+++ b/tanushkmedium.html
@@ -266,17 +266,18 @@
             </div>
             <div class="thirdhalf_righthalf border">
                 <div class="inner ">
+                    <div class="discover">Discover more of what matters to you</div>
                     <div class="up border">
                         <div class="boxes">
                         <div class="minibox2">Programming</div>
-                        <div class="minibox2"></div>
-                        <div class="minibox2"></div>
-                        <div class="minibox2"></div>
-                        <div class="minibox2"></div>
-                        <div class="minibox2"></div>
-                        <div class="minibox2"></div>
-                        <div class="minibox2"></div>
-                        <div class="minibox2"></div>
+                        <div class="minibox2">Data science</div>
+                        <div class="minibox2">Technology</div>
+                        <div class="minibox2">Self employment</div>
+                        <div class="minibox2">Writing</div>
+                        <div class="minibox2">Relationships</div>
+                        <div class="minibox2">Machine learning</div>
+                        <div class="minibox2">Productivity</div>
+                        <div class="minibox2">Politics</div>
                         </div>
                     </div>
                     <div class="down">
