--- a/tanushkmedium.html
+++ b/tanushkmedium.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <div class="navigationbar"> 
-            <a href="medium.html"><div class="mediumlogo">
+            <a href="tanushkmedium.html"><div class="mediumlogo">
                 
             </div></a>
             <div class="freespace"></div>
