--- a/tanushkmedium.html
+++ b/tanushkmedium.html
@@ -9,9 +9,10 @@
 </head>
 <body>
         <div class="navigationbar"> 
-            <a href="tanushkmedium.html"><div class="mediumlogo">
-                
-            </div></a>
+            <div>
+                <a href="tanushkmedium.html"><div class="mediumlogo">
+                </div></a>
+            </div>
             <div class="freespace"></div>
             <div class="navcontents">
                 <div class="ourstory"><a href="" style="text-decoration: none;" class="a">Our Story</a></div>
