--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
         <div class="navigationbar"> 
             <div>
-                <a href="tanushkmedium.html"><div class="mediumlogo">
+                <a href="index.html"><div class="mediumlogo">
                 </div></a>
             </div>
             <div class="freespace"></div>
