--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
             <div class="thirdhalf_righthalf border">
                 <div class="inner ">
-                    <div class="discover">Discover more of what matters to you</div>
+                    <div class="discover2">Discover more of what matters to you</div>
                     <div class="up border">
                         <div class="boxes">
                         <div class="minibox2">Programming</div>
