--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="queries.css">
 </head>
 <body>
+    <div class="outernavbar">
         <div class="navigationbar"> 
             <div>
                 <a href="index.html"><div class="mediumlogo">
                 </div></a>
             </div>
-            <div class="freespace"></div>
+            <!-- <div class="freespace"></div> -->
             <div class="navcontents">
                 <div class="ourstory"><a href="" style="text-decoration: none;" class="a">Our Story</a></div>
                 <div class="membership"><a href=""style="text-decoration: none;" class="a">Membership</a></div>
@@ -24,6 +25,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
 
         <div class="midpage">
